[package]
name = "bbs_anonymous_credentials"
version = "0.1.0"
edition = "2021"
authors = ["jkcrypto <jkcrypto@google.com>"]
description = "BBS Anonymous Credentials (BBS+) implementation in Rust using BLS12-381"

[dependencies]
bls12_381 = "0.8.0"
ff = "0.13.0"
group = "0.13.0"
rand_core = { version = "0.6.4", features = ["std"] }
rand = "0.8.5"
sha2 = "0.10.8"
curve25519-dalek = "4.1.3"
blst = "0.3.11"
